--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -32,6 +32,7 @@
   > .widget-amount {
     margin: ($base-size * 2) 0 0 0;
   }
+
 }
 
 .page__title {
@@ -53,6 +54,7 @@
     position: absolute;
     right: 0;
   }
+
 }
 
 .rangeSlider {
@@ -77,6 +79,7 @@
       top: -6px;
       background: $color-dark;
     }
+
   }
 
   &__fill {
@@ -99,27 +102,7 @@
   height: 320px;
   border: 12px solid $color-dark;
   margin: ($base-size * 4) auto;
-  background: linear-gradient(
-    to right,
-    #e9dfc4 0%,
-    #e9dfc4 1%,
-    #ede3c8 2%,
-    #ede3c8 24%,
-    #ebddc3 25%,
-    #e9dfc4 48%,
-    #ebddc3 49%,
-    #e6d8bd 52%,
-    #e6d8bd 53%,
-    #e9dbc0 54%,
-    #e6d8bd 55%,
-    #e6d8bd 56%,
-    #e9dbc0 57%,
-    #e6d8bd 58%,
-    #e6d8bd 73%,
-    #e9dbc0 74%,
-    #e9dbc0 98%,
-    #ebddc3 100%
-  );
+  background: linear-gradient(to right, #e9dfc4 0%, #e9dfc4 1%, #ede3c8 2%, #ede3c8 24%, #ebddc3 25%, #e9dfc4 48%, #ebddc3 49%, #e6d8bd 52%, #e6d8bd 53%, #e9dbc0 54%, #e6d8bd 55%, #e6d8bd 56%, #e9dbc0 57%, #e6d8bd 58%, #e6d8bd 73%, #e9dbc0 74%, #e9dbc0 98%, #ebddc3 100%);
   background-size: ($base-size * 3);
   background-repeat: repeat;
 
@@ -132,7 +115,7 @@
   .object {
     @extend .h3;
     background: #f7f1e3;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 12px rgba(0,0,0,0.2);
   }
 
   .entry {
@@ -171,6 +154,7 @@
       &::after {
         border-radius: 50%;
       }
+
     }
 
     &.booked {
@@ -179,7 +163,7 @@
 
       &::after {
         position: absolute;
-        content: "";
+        content: '';
         width: 100%;
         height: 100%;
         left: 0;
@@ -187,6 +171,7 @@
         background: $color-dark;
         opacity: 0.4;
       }
+
     }
   }
 
